prometheus: add a longterm instance

--- a/roles/monitoring_server/handlers/main.yaml
+++ b/roles/monitoring_server/handlers/main.yaml
@@ -4,3 +4,6 @@
 
 - name: restart grafana
   service: name=grafana.service state=restarted
+
+- name: restart prometheus-longterm
+  service: name=prometheus-longterm.service state=restarted
