--- a/roles/dpb/tasks/main.yml
+++ b/roles/dpb/tasks/main.yml
@@ -1,12 +1,10 @@
 ---
-
 - name: clone or pull git repo
   git:
     repo: https://github.com/cjc7373/dpb.git
     dest: "{{ project_path }}"
     update: "{{ update is defined }}"
-  notify:
-    reload gunicorn
+  notify: reload gunicorn
   # Github operations are very likely to fail in China..
   retries: 5
   delay: 3
