--- a/group_vars/all/misc.yml
+++ b/group_vars/all/misc.yml
@@ -1,10 +1,9 @@
 ---
-
 root_ssh_keys:
   - coherence.pub
 
-username: "coherence"
-name: "Harold Cheng"
-email: "niuchangcun@gmail.com"
+username: coherence
+name: Harold Cheng
+email: niuchangcun@gmail.com
 
 auth_server: https://auth.coherence.space
