role: rename nwu.icu to nwu-icu to address lint errors

--- a/playbooks/nwu.icu.yml
+++ b/playbooks/nwu.icu.yml
@@ -6,4 +6,4 @@
     - { role: tailscale, tags: [tailscale] }
     - { role: caddy, tags: [caddy] }
     - { role: monitoring_exporter, tags: [monitoring_exporter] }
-    - { role: nwu.icu, tags: [nwu.icu] }
+    - { role: nwu-icu, tags: [nwu.icu] }
