--- a/playbooks/hk-idc-wiki.yml
+++ b/playbooks/hk-idc-wiki.yml
@@ -5,5 +5,6 @@
     - { role: arch_common }
     - { role: tailscale, tags: [tailscale] }
     - { role: caddy, tags: [caddy] }
+    - { role: trojan, tags: [trojan] }
     - { role: monitoring_exporter, tags: [monitoring_exporter] }
     - { role: monitoring_server, tags: [monitoring_server] }
