--- a/group_vars/all/misc.yml
+++ b/group_vars/all/misc.yml
@@ -7,3 +7,5 @@ name: Harold Cheng
 email: niuchangcun@gmail.com
 
 auth_server: https://auth.coherence.space
+
+docker_mirror: docker.coherence.codes
