update config from actual config

--- a/group_vars/all/misc.yml
+++ b/group_vars/all/misc.yml
@@ -8,4 +8,4 @@ email: niuchangcun@gmail.com
 
 auth_server: https://auth.coherence.space
 
-docker_mirror: docker.coherence.codes
+docker_registry: docker.io
