--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -62,12 +62,17 @@
       - python-virtualenv
       - fail2ban
       - firewalld
+      - base-devel # for package build
     state: present
 
 - name: install some tools
   pacman:
     name: [htop, neofetch, trash-cli, strace, bind, rsync, speedtest-cli, archlinux-contrib, ncdu, iperf3, lsof, screen, jq, which]
     state: present
+
+- name: create a user for package building
+  ansible.builtin.user:
+    name: build
 
 - name: enable and start docker
   service: name=docker enabled=yes state=started
