prometheus: esp32 scrape config

--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -63,6 +63,7 @@
       - fail2ban
       - firewalld
       - base-devel # for package build
+      - less
     state: present
 
 - name: install some tools
