use inventory_hostname

--- a/roles/authelia/tasks/main.yml
+++ b/roles/authelia/tasks/main.yml
@@ -5,7 +5,7 @@
     zone: coherence.space # FIXME
     type: CNAME
     record: auth
-    value: "{{ ansible_fqdn }}"
+    value: "{{ inventory_hostname }}"
 
 - name: create data directory
   file: path={{ item }} state=directory mode=0755
