--- a/roles/derp/tasks/main.yaml
+++ b/roles/derp/tasks/main.yaml
@@ -5,7 +5,7 @@
     zone: coherence.space # FIXME
     type: CNAME
     record: ts
-    value: "{{ ansible_fqdn }}"
+    value: "{{ inventory_hostname }}"
 
 - name: install derp
   pacman: name=derper state=present
