--- a/roles/derp/tasks/main.yaml
+++ b/roles/derp/tasks/main.yaml
@@ -2,7 +2,7 @@
 - name: configure dns for derp
   cloudflare_dns:
     api_token: "{{ CLOUDFLARE_API_TOKEN }}"
-    zone: coherence.space # FIXME
+    zone: coherence.space
     type: CNAME
     record: ts
     value: "{{ inventory_hostname }}"
