--- a/roles/rsshub/tasks/main.yml
+++ b/roles/rsshub/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+- name: configure dns for rsshub
+  cloudflare_dns:
+    api_token: "{{ CLOUDFLARE_API_TOKEN }}"
+    zone: coherence.space
+    type: CNAME
+    record: rsshub
+    value: "{{ inventory_hostname }}"
+
 - name: create data directory
   file: path=/root/rsshub state=directory mode=0755
 
