migrate to tencent shanghai

--- a/roles/miniflux/tasks/main.yml
+++ b/roles/miniflux/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: configure dns for miniflus
+- name: configure dns for miniflux
   cloudflare_dns:
     api_token: "{{ CLOUDFLARE_API_TOKEN }}"
     zone: coherence.space
