--- a/playbooks/shanghai.yaml
+++ b/playbooks/shanghai.yaml
@@ -8,3 +8,15 @@
     - { role: monitoring_exporter, tags: [monitoring_exporter] }
     - { role: derp, tags: [derp] }
     - { role: joplin_server, tags: [joplin_server] }
+    - { role: miniflux, tags: [miniflux] }
+    - { role: authelia, tags: [authelia] }
+    - { role: syncthing, tags: [syncthing] }
+    - { role: fava, tags: [fava] }
+    - { role: dpb, tags: [dpb] }
+    - role: plausible_analytics
+      vars: { zone: coherence.space, domain: analytics }
+      tags: [pa]
+    - { role: beian, tags: [beian] }
+    - { role: rsshub, tags: [rsshub] }
+    - { role: gitea, tags: [gitea] }
+    - { role: jitsi, tags: [jitsi] }
