--- a/roles/dpb/tasks/main.yml
+++ b/roles/dpb/tasks/main.yml
@@ -25,7 +25,7 @@
     state: present
 
 - name: install dependencies
-  command: poetry install --no-dev
+  command: poetry install
   args:
     chdir: "{{ project_path }}"
   environment:
