--- a/roles/arch_common/tasks/main.yml
+++ b/roles/arch_common/tasks/main.yml
@@ -67,6 +67,9 @@
       - firewalld
       - base-devel # for package build
       - less
+      - sysstat # provides iostat
+      - man-db
+      - man-pages
     state: present
 
 - name: install some tools
