--- a/playbooks/shanghai.yaml
+++ b/playbooks/shanghai.yaml
@@ -7,6 +7,7 @@
     - { role: caddy, tags: [caddy] }
     - { role: monitoring_exporter, tags: [monitoring_exporter] }
     - { role: derp, tags: [derp] }
+    - { role: postgresql, tags: [postgresql] }
     - { role: joplin_server, tags: [joplin_server] }
     - { role: miniflux, tags: [miniflux] }
     - { role: authelia, tags: [authelia] }
