--- a/roles/forgejo/tasks/main.yml
+++ b/roles/forgejo/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: configure dns for gitea
+- name: configure dns for forgejo
   cloudflare_dns:
     api_token: "{{ CLOUDFLARE_API_TOKEN }}"
     zone: coherence.space
@@ -7,15 +7,15 @@
     record: git
     value: "{{ inventory_hostname }}"
 
-- name: install gitea
-  pacman: name=gitea state=present
+- name: install forgejo
+  pacman: name=forgejo state=present
 
-- name: copy gitea config file
-  template: src=app.ini.j2 dest=/etc/gitea/app.ini mode=0644 owner=gitea group=gitea
-  notify: restart gitea
+- name: copy forgejo config file
+  template: src=app.ini.j2 dest=/etc/forgejo/app.ini mode=0644 owner=forgejo group=forgejo
+  notify: restart forgejo
 
-- name: start and enable gitea
-  service: name=gitea.service enabled=yes state=started
+- name: start and enable forgejo
+  service: name=forgejo.service enabled=yes state=started
 
 - name: add caddy config
   template: src=gitea.caddy.j2 dest=/etc/caddy/conf.d/gitea.caddy mode=0644
