--- a/playbooks/athena.yaml
+++ b/playbooks/athena.yaml
@@ -8,3 +8,4 @@
     - { role: monitoring_exporter, tags: [monitoring_exporter] }
     - { role: monitoring_server, tags: [monitoring_server] }
     - { role: docker_registry, tags: [docker_registry] }
+    - { role: tuic, tags: [tuic] }
