--- a/truenas/Dockerfile_caddy
+++ b/truenas/Dockerfile_caddy
@@ -1,12 +1,13 @@
 # pushed to docker hub as cjc7373/caddy
 
-FROM caddy:2.9-builder AS builder
+FROM caddy:2.10-builder AS builder
 
 ENV GOPROXY=https://goproxy.cn,direct
 
 RUN xcaddy build \
-    --with github.com/caddy-dns/cloudflare
+    --with github.com/caddy-dns/cloudflare \
+    --with github.com/mholt/caddy-webdav
 
-FROM caddy:2.9
+FROM caddy:2.10
 
 COPY --from=builder /usr/bin/caddy /usr/bin/caddy
